# CS2501-P1-Ray-Tracing

./: .gitignore  CMakeLists.txt  README.md  RayTracingApp.cpp  RayTracingApp.h  main.cpp
cmake/: glm.cmake
raytracing/light/: AmbientLight.h  DirectionalLight.cpp  DirectionalLight.h  Incidence.h  Light.h  PointLight.cpp  PointLight.h
raytracing/object/: Cylinder.cpp  Cylinder.h  Intersection.h  Material.h  Plane.cpp  Plane.h  Ray.cpp  Ray.h  Shape.h  Sphere.cpp  Sphere.h
raytracing/scene/: Camera.cpp  Camera.h  Scene.cpp  Scene.h
raytracing/tools/: IntegerRange.h  Math.cpp  Math.h
scenes/: FirefliesApp.cpp  FirefliesApp.h  Firefly.cpp  Firefly.h
